{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 188,
  "lineage": "48bd3aca-b9ee-0ce0-72d4-22322124219e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ghes_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089cd9cdc5def8fd0",
            "arn": "arn:aws:ec2:eu-west-3:066866130858:instance/i-0d0cb8077386db333",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d0cb8077386db333",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "tdupoiron-ghes-kp-tf",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01ee5e91035efd239",
            "private_dns": "ip-10-0-1-172.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.172",
            "public_ip": "13.36.234.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 600,
                "throughput": 0,
                "volume_id": "vol-02c59ed6884568031",
                "volume_size": 200,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09a54f718d9c41aed",
            "tags": {
              "Name": "tdupoiron-ghes-tf",
              "Owner": "tdupoiron"
            },
            "tags_all": {
              "Name": "tdupoiron-ghes-tf",
              "Owner": "tdupoiron"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03bb8458501aa101b"
            ]
          },
          "dependencies": [
            "aws_key_pair.ghes_kp",
            "aws_security_group.ghes_sg",
            "aws_subnet.ghes_subnet",
            "aws_vpc.ghes_vpc",
            "data.aws_ami.ghes_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ghes_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:066866130858:internet-gateway/igw-08edb207780af27bd",
            "id": "igw-08edb207780af27bd",
            "owner_id": "066866130858",
            "tags": {
              "Name": "tdupoiron-ghes-igw-tf"
            },
            "tags_all": {
              "Name": "tdupoiron-ghes-igw-tf"
            },
            "vpc_id": "vpc-0092d4bde59e1daf7"
          },
          "dependencies": [
            "aws_vpc.ghes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ghes_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:066866130858:route-table/rtb-025a2266fe2567646",
            "id": "rtb-025a2266fe2567646",
            "owner_id": "066866130858",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08edb207780af27bd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tdupoiron-ghes-rtb-tf"
            },
            "tags_all": {
              "Name": "tdupoiron-ghes-rtb-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0092d4bde59e1daf7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ghes_igw",
            "aws_vpc.ghes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ghes_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069214ac62383bb42",
            "route_table_id": "rtb-025a2266fe2567646",
            "subnet_id": "subnet-09a54f718d9c41aed"
          },
          "dependencies": [
            "aws_internet_gateway.ghes_igw",
            "aws_route_table.ghes_rtb",
            "aws_subnet.ghes_subnet",
            "aws_vpc.ghes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ghes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:066866130858:security-group/sg-03bb8458501aa101b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03bb8458501aa101b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 122,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 122
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "tdupoiron-ghes-sg-tf",
            "name_prefix": "",
            "owner_id": "066866130858",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tdupoiron-ghes-sg-tf",
              "Owner": "tdupoiron"
            },
            "tags_all": {
              "Name": "tdupoiron-ghes-sg-tf",
              "Owner": "tdupoiron"
            },
            "timeouts": null,
            "vpc_id": "vpc-0092d4bde59e1daf7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ghes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ghes_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:066866130858:subnet/subnet-09a54f718d9c41aed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a54f718d9c41aed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "066866130858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tdupoiron-ghes-subnet-tf"
            },
            "tags_all": {
              "Name": "tdupoiron-ghes-subnet-tf"
            },
            "vpc_id": "vpc-0092d4bde59e1daf7"
          },
          "dependencies": [
            "aws_vpc.ghes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ghes_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:066866130858:vpc/vpc-0092d4bde59e1daf7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dfd7b24c46d551c3",
            "default_route_table_id": "rtb-0206dff576a5f0195",
            "default_security_group_id": "sg-0458c6a8887f7860e",
            "dhcp_options_id": "dopt-6581530d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0092d4bde59e1daf7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0206dff576a5f0195",
            "owner_id": "066866130858",
            "tags": {
              "Name": "tdupoiron-ghes-vpc-tf"
            },
            "tags_all": {
              "Name": "tdupoiron-ghes-vpc-tf"
            }
          }
        }
      ]
    }
  ]
}